Fixe FragmentNewsfeed layout, and disable Sync for safety

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     lintOptions {
-        abortOnError false
+        disable 'InvalidPackage'
     }
 
     defaultConfig {
@@ -52,4 +52,5 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.1' // Volley Library (handles all network request)
     compile 'com.github.paolorotolo:appintro:2.0.0'
     compile 'co.trikita:log:1.1.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
