--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,14 +72,13 @@
         </activity>
         <activity
             android:name=".view.LoginActivity"
-            android:label="@string/title_activity_login" >
-        </activity>
+            android:label="@string/title_activity_login" />
 
         <!-- Join -->
         <activity
             android:name=".view.JoinActivity"
             android:label="@string/title_activity_join"
-            android:windowSoftInputMode="adjustNothing" />
+            android:windowSoftInputMode="adjustNothing"/>
 
         <!-- Create -->
         <activity
