--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:cardview-v7:22.2.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile 'com.google.code.gson:gson:2.3.1'
 
     // Additionnal libraries
     // Local
@@ -50,7 +51,7 @@ dependencies {
     // External
     compile 'com.getbase:floatingactionbutton:1.8.0'  // Floating action button w/ menus
     compile 'com.facebook.android:facebook-android-sdk:3.23.0' // Facebook sdk
-    compile 'com.mcxiaoke.volley:library:1.0.1' // Volley Library (handles all network request)
+    compile 'com.mcxiaoke.volley:library:1.0.17' // Volley Library (handles all network request)
     compile 'com.github.paolorotolo:appintro:2.0.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'co.trikita:log:1.1.1'
