--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     // External
     compile 'com.getbase:floatingactionbutton:1.8.0'  // Floating action button w/ menus
     compile 'com.facebook.android:facebook-android-sdk:3.23.0' // Facebook sdk
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.mcxiaoke.volley:library:1.0.17' // Volley Library (handles all network request)
     compile 'com.github.paolorotolo:appintro:2.0.0'
     compile 'com.jakewharton:butterknife:7.0.1'
